# BreezeBrowser

./: .gitignore  App.tsx  AppLoader.tsx  README.md  package-lock.json  package.json
Frontend/: App.tsx  WelcomeScreen.tsx  app.json  declarations.d.ts  index.ts  metro.config.js  package-lock.json  package.json  polyfills.ts
Frontend/android/app/: build.gradle
Frontend/assets/: my-release-key.keystore
Frontend/assets/images/: nft.avif  sol-pixel.avif
Frontend/components/: Meter.tsx  SkiaBlur.tsx
Frontend/components/BluryEffect/: BluryEffect.tsx
Frontend/components/elements/: Blurry.tsx  BottomBar.tsx  Components.tsx  GradientBlur.tsx  LayerShadow.tsx  PrivacyBrowser.tsx  PrivacySearchBar.tsx  PrivateBottomBar.tsx  SearchBar.tsx  Shadows.tsx  Shadowy.tsx
Frontend/components/hooks/: GlobalTitleStore.tsx  ReadingListManager.tsx  TabOverviewActions.ts  UseCustomView.tsx  types.ts
Frontend/components/icons/: Icons.tsx
Frontend/constants/: BottomTabAction.tsx
Frontend/screens/: PrivacyStartScreen.tsx  StartPage.tsx
app/: app.json  package.json
backend/project-phantom/: package.json
components/BluryEffect/: BluryEffect.tsx
components/elements/: Blurry.tsx  LayerShadow.tsx  PrivacySearchBar.tsx  PrivateBottomBar.tsx  Shadows.tsx
components/fonts/: TextBox.tsx
context/: TabContext.tsx
contract/project-phantom/: Anchor.toml
contract/project-phantom/programs/project-phantom/: Cargo.toml
contract/project-phantom/programs/project-phantom/src/: lib.rs
screens/: BrowserView.tsx  PrivacyView.tsx  WebViewer.tsx
screens/modules/: StartLinks.tsx
(+7 files in other folders)
